[gd_scene load_steps=24 format=2]

[ext_resource path="res://moduloPais/voceSabia/diretora/Quiz1/Quiz.gd" type="Script" id=1]
[ext_resource path="res://img/voceSabia/quiz_background.png" type="Texture" id=2]
[ext_resource path="res://font/AMPLESOFT MEDIUM.OTF" type="DynamicFontData" id=3]
[ext_resource path="res://img/voceSabia/verdadeiro.png" type="Texture" id=4]
[ext_resource path="res://img/voceSabia/falso.png" type="Texture" id=5]
[ext_resource path="res://moduloPais/voceSabia/diretora/Quiz1/falseSlide.tres" type="Animation" id=6]
[ext_resource path="res://moduloPais/voceSabia/diretora/Quiz1/trueSlide.tres" type="Animation" id=7]
[ext_resource path="res://moduloPais/voceSabia/diretora/Quiz1/questionHolder.tscn" type="PackedScene" id=8]
[ext_resource path="res://img/voceSabia/fundo_feliz.png" type="Texture" id=9]
[ext_resource path="res://img/voceSabia/fund_triste.png" type="Texture" id=10]
[ext_resource path="res://img/voceSabia/feliz.png" type="Texture" id=11]
[ext_resource path="res://img/voceSabia/mentira.png" type="Texture" id=12]
[ext_resource path="res://img/botoes/seg_score_1.png" type="Texture" id=13]
[ext_resource path="res://img/botoes/seg_score_2.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=2]

[sub_resource type="StyleBoxTexture" id=3]

[sub_resource type="StyleBoxTexture" id=4]

[sub_resource type="StyleBoxTexture" id=5]

[sub_resource type="StyleBoxTexture" id=6]

[sub_resource type="StyleBoxTexture" id=7]

[sub_resource type="DynamicFont" id=8]
size = 39
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 39
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
questionTextPath = NodePath("questionText")
trueAnswerPath = NodePath("answerLayer/trueAnswer")
falseAnswerPath = NodePath("answerLayer/falseAnswer")
animatorPath = NodePath("animator")
timerPath = NodePath("Timer")
questionHolderPath = NodePath("questionHolder")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
editor/display_folded = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_top = -1.85059
margin_right = 1024.0
margin_bottom = 617.149
texture = ExtResource( 2 )

[node name="questionText" type="Label" parent="."]
margin_left = 43.0
margin_top = 71.0
margin_right = 982.0
margin_bottom = 245.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true

[node name="buttonLayer" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="trueButton" type="Button" parent="buttonLayer"]
visible = false
margin_left = -0.403687
margin_top = 267.33
margin_right = 514.596
margin_bottom = 593.33
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
icon = ExtResource( 4 )

[node name="falseButton" type="Button" parent="buttonLayer"]
visible = false
margin_left = 516.95
margin_top = 267.1
margin_right = 984.95
margin_bottom = 549.1
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
icon = ExtResource( 5 )

[node name="falseButton2" type="TextureButton" parent="buttonLayer"]
margin_left = 521.748
margin_top = 281.037
margin_right = 989.748
margin_bottom = 563.037
texture_normal = ExtResource( 5 )

[node name="trueButton2" type="TextureButton" parent="buttonLayer"]
margin_left = 34.6381
margin_top = 281.037
margin_right = 502.638
margin_bottom = 565.037
texture_normal = ExtResource( 4 )

[node name="answerLayer" type="CanvasLayer" parent="."]
editor/display_folded = true
layer = 0

[node name="trueAnswer" type="Label" parent="answerLayer"]
margin_left = 35.1516
margin_top = 284.404
margin_right = 502.152
margin_bottom = 565.404
custom_fonts/font = SubResource( 8 )
text = "Você Acertou a resposta"
align = 1

[node name="falseAnswer" type="Label" parent="answerLayer"]
margin_left = 524.253
margin_top = 284.354
margin_right = 991.253
margin_bottom = 559.354
custom_fonts/font = SubResource( 9 )
text = "Você errou a resposta"
align = 1

[node name="animator" type="AnimationPlayer" parent="."]
anims/falseSlide = ExtResource( 6 )
anims/trueSlide = ExtResource( 7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="questionHolder" parent="." instance=ExtResource( 8 )]

[node name="fund_feliz" type="TextureRect" parent="."]
visible = false
margin_left = 36.91
margin_top = 280.925
margin_right = 504.91
margin_bottom = 619.925
texture = ExtResource( 9 )

[node name="fund_triste" type="TextureRect" parent="."]
visible = false
margin_left = 36.9099
margin_top = 282.976
margin_right = 504.91
margin_bottom = 621.976
texture = ExtResource( 10 )

[node name="feliz" type="TextureRect" parent="."]
visible = false
margin_left = 184.55
margin_top = 330.139
margin_right = 396.55
margin_bottom = 649.139
texture = ExtResource( 11 )

[node name="triste" type="TextureRect" parent="."]
visible = false
margin_left = 188.651
margin_top = 332.189
margin_right = 400.651
margin_bottom = 652.189
texture = ExtResource( 12 )

[node name="fund_feliz1" type="TextureRect" parent="."]
visible = false
margin_left = 524.941
margin_top = 282.976
margin_right = 992.941
margin_bottom = 621.976
texture = ExtResource( 9 )

[node name="fund_triste1" type="TextureRect" parent="."]
visible = false
margin_left = 522.891
margin_top = 282.976
margin_right = 990.891
margin_bottom = 621.976
texture = ExtResource( 10 )

[node name="feliz2" type="TextureRect" parent="."]
visible = false
margin_left = 680.783
margin_top = 330.139
margin_right = 892.783
margin_bottom = 649.139
texture = ExtResource( 11 )

[node name="triste2" type="TextureRect" parent="."]
visible = false
margin_left = 682.833
margin_top = 326.038
margin_right = 894.833
margin_bottom = 645.038
texture = ExtResource( 12 )

[node name="seguir" type="TextureButton" parent="."]
visible = false
margin_left = 399.734
margin_top = 470.058
margin_right = 635.734
margin_bottom = 575.058
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 14 )

[connection signal="pressed" from="buttonLayer/trueButton" to="." method="_on_trueButton_pressed"]
[connection signal="pressed" from="buttonLayer/falseButton" to="." method="_on_falseButton_pressed"]
[connection signal="pressed" from="buttonLayer/falseButton2" to="." method="_on_falseButton2_pressed"]
[connection signal="pressed" from="buttonLayer/trueButton2" to="." method="_on_trueButton2_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="seguir" to="." method="_on_seguir_pressed"]
